<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/linearLayout2"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@drawable/vet2"
              tools:context=".activities.RegisterActivity">

    <TextView
        android:id="@+id/greetingText"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:text="@string/greeting"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/textInputEditTextLastName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name_hint"
        android:textColorHint="@android:color/black"
        android:backgroundTint="@android:color/black"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/textInputEditTextFirstName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name_hint"
        android:textColorHint="@android:color/black"
        android:backgroundTint="@android:color/black"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/textInputEditTextPhoneNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number_hint"
        android:textColorHint="@android:color/black"
        android:backgroundTint="@android:color/black"
        android:layout_marginTop="10dp"
        android:inputType="phone"
        android:maxLines="1"
        android:textColor="@android:color/black" />


    <EditText
        android:id="@+id/textInputEditTextEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:textColorHint="@android:color/black"
        android:backgroundTint="@android:color/black"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/textInputEditTextPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:textColorHint="@android:color/black"
        android:backgroundTint="@android:color/black"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/textInputEditTextConfirmPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_hint"
        android:textColorHint="@android:color/black"
        android:backgroundTint="@android:color/black"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register_button_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@android:color/white"/>
    <TextView
        android:id="@+id/textViewLinkSignIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_link_text"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textSize="16sp"/>
</LinearLayout>
